finished with JS Atomic 02

--- a/02_OutputWithAlertAndLog/index.html
+++ b/02_OutputWithAlertAndLog/index.html
@@ -10,7 +10,7 @@
   <h2>What's the difference between alert() and console.log()?</h2>
   <p>alert() pops up, then the page's HTML loads.  From W3C -- The alert() method displays an alert box with a specified message and an OK button.  An alert box is often used if you want to make sure information comes through to the user.</p>
   <p>console.log() displays data via writing into the browser console.</p>
-
+  <br>
   <h2>What's one situation where you might use an alert() to tell the user something?</h2>
   <p>When you want to stop the user from proceeding until they acknowledge a message.</p>
   <br>
@@ -18,14 +18,17 @@
   <p>Could be overused and draw the user's focus from the web app to the alert message.</p>
   <br>
   <h2>Would it make sense to use console.log() to tell the user things? Why or why not?</h2>
-  <p>Yes, when you want to make certain the user acknowledges your alert message.</p>
+  <p>No, because I don't think the user can view the console.log unless they do a CMD+alt+J or similar shortcut to view the page's javascript.</p>
   <br>
   <h2>What's one way that console.log() might be a good tool for you to use?
 </h2>
-
+<p>For debugging, or possibly tracking user interactions with your web app.</p>
+<br>
 <h2>When do the console.log() statements get run? Is it before the first alert() gets displayed? After it gets displayed but before the user clicks "OK" (or equivalent)? After the user clicks to close the dialog box? A different time? How did you find out for sure?</h2>
-
+<p>In our example here, the console.log() statements run after the first alert() gets displayed.  I used the MacBook's CMD+alt+J shortcut to verify as I refreshed the web page.</p>
+<br>
 <h2>What questions do you have?</h2>
+<p>No questions, all this seems like I'll be able to implement at some point.</p>
 
 </body>
 </html>
