JS Atomic 02 with question

--- a/02_OutputWithAlertAndLog/index.html
+++ b/02_OutputWithAlertAndLog/index.html
@@ -28,7 +28,7 @@
 <p>In our example here, the console.log() statements run after the first alert() gets displayed.  I used the MacBook's CMD+alt+J shortcut to verify as I refreshed the web page.</p>
 <br>
 <h2>What questions do you have?</h2>
-<p>No questions, all this seems like I'll be able to implement at some point.</p>
+<p>I know the console.log() is very important, I don't really understand why yet.</p>
 
 </body>
 </html>
