--- a/06_IfStatements/6dindex.html
+++ b/06_IfStatements/6dindex.html
@@ -11,8 +11,7 @@
 </html>
   <h2>Does it matter what order your if-statements are in?</h2>
   <p>The messages display in the order of the if-statements, but I moved them around and didn't have any problems with them returning anything unexpected. (I moved the "don't drink and drive" one to the bottom since I think it made a nicer "goodbye" sort of statement)</p>
-
-- Does it matter what order your if-statements are in?
-- When testing ranges, did you use `&&`, `||`, or something else entirely (e.g. nested if-statements)? If you used `&&`, why is that a better choice than `||` (and vice-versa)?
-- What types of input produce a value of `NaN` after parsing? Is it important to check for `NaN` values? Is it possible for a `NaN` value to trigger any of the other if-statements? If so, how and why?
-- What questions do you have?
+  <h2>When testing ranges, did you use `&&`, `||`, or something else entirely </h2>
+  <p>I used "&&" for my age-range if statements. I think "||" (or) would cause problems, since all numbers that exist are either >=0  or <=15. </p>
+  <h2>What types of input produce a value of `NaN` after parsing? Is it important to check for `NaN` values? Is it possible for a `NaN` value to trigger any of the other if-statements? If so, how and why?</h2>
+  <p>Words and symbols throw up a NaN for me, but it hasn't triggered any of my age-specific if statements. That might just be how I wrote mine, though.</p>
