--- a/08_InputValidationLoops/index.html
+++ b/08_InputValidationLoops/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <title>JS Atomic 05</title>
-  <script src="password.js"></script>
-  
+  <!-- <script src="password.js"></script> -->
+  <!-- <script src="numbergame.js"></script> -->
+  <script src="numbers.js"></script>
 </head>
 <body>
   <h1>JS Atomic 08 </h1> 
