--- a/08_InputValidationLoops/index.html
+++ b/08_InputValidationLoops/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>JS Atomic 03</title>
-  <script type="text/javascript" src="password.js"></script>
+  <script type="text/javascript" src="password_two.js"></script>
 </head>
 <body>
   <h1>JS Atomic 07</h1>
