oh i passed those

--- a/06_IfStatements/6findex.html
+++ b/06_IfStatements/6findex.html
@@ -7,3 +7,8 @@
 <body>
   <h1>JS Atomic 06.F Triangles</h1>
   <h3><i>confirmation of triangle viability pops up, calculations are in console.log</i></h3>
+  <h2>What happens if one (or more) of the lengths aren't input correctly and thus end up as `NaN`? What happens if one of the lengths of the triangle is `0`? Two of the lengths? All three lengths? What happens if the user inputs one or more negative integers for the lengths of the triangle's legs?</h2>
+  <p>The way I have it set up, the triangle test still fails even with NaNs, or sides with tricky "lengths" like 0 or negative numbers.</p>
+  <h2>Assuming errors exist, note that all of these errors come from the user inputting one or more invalid values. What are some strategies you might use to prevent this from happening (or at least to prevent those invalid values from being used)?</h2>
+  <p>I could check the numbers as they're being submitted and prompt them to give me valid ones. It would be easy for me to do in Ruby but would take me a second to figure out in JS since I am less familiar.</p>
+  
