--- a/06_IfStatements/indexE.html
+++ b/06_IfStatements/indexE.html
@@ -8,13 +8,13 @@
   <h1>JS Atomic 06-E</h1>
 
   <h2>Does it matter what order your if / else if statements happen? If you reorder them, does your program still produce correct output?</h2>
-  <p> </p>
+  <p>Order doesn't seem to matter.</p>
 
   <h2>What's wrong with this conditional: if (age < 16 && age > 21)?</h2>
-  <p> </p>
+  <p>A number can't be both less than 16 and greater than 21.</p>
 
   <h2>Let's say that your program needs to be easy to modify so that it works in parts of the country/world where the age ranges are different. How would you replace the numbers in your if statements with variables to make the program make sense? Or is it easier to just have the numbers be there? Does it matter?</h2>
-  <p> </p>
+  <p>If the data was really as limited as it is now, I can't see that it would be especially helpful to turn a handful of numbers into variables.</p>
 
 </body>
 </html>
