--- a/06_IfStatements/indexF.html
+++ b/06_IfStatements/indexF.html
@@ -7,14 +7,14 @@
 <body>
   <h1>JS Atomic 06-F</h1>
 
-  <h2> </h2>
-  <p> </p>
+  <h2>What happens if one (or more) of the lengths aren't input correctly and thus end up as NaN?</h2>
+  <p><b>Prediction:</b> I suppose it will just say it's not a valid triangle. <b>Actual:</b> It sends the alert that "these lengths don't form a real triangle." I didn't account for NaN inputs.</p>
 
-  <h2> </h2>
-  <p> </p>
+  <h2>What happens if one of the lengths of the triangle is 0? Two of the lengths? All three lengths?</h2>
+  <p><b>Prediction:</b> I suppose it will just say it's not a valid triangle, like the last issue. <b>Actual:</b> Yep.</p>
 
-  <h2> </h2>
-  <p> </p>
+  <h2>What happens if the user inputs one or more negative integers for the lengths of the triangle's legs?</h2>
+  <p><b>Prediction:</b> Same, I suppose? <b>Actual:</b> Yeah.</p>
 
 </body>
 </html>
