--- a/06_IfStatements/B_index.html
+++ b/06_IfStatements/B_index.html
@@ -9,12 +9,12 @@
   <h1>JS Atomic 06 B</h1>
   
   <h2>Does it matter if the user-provided password matches your password exactly, or is there some flexibility allowed in capitalization?</h2>
-  <p></p>
+  <p>From what I can tell, there is no leniency for capitalization.</p>
 
   <h2>Did you use = or == or === to compare passwords (or something else)? Why? Would any of the others work?</h2>
-  <p></p>
+  <p>I decided to use '===' to add another layer of 'protection' so that it compared not only value but data type. I believe that '==' would work as well but it would only test value. However, I don't believe that '=' would work as it used to set variables.</p>
 
   <h2>Why is it a bad idea to store a password (or other sensitive information) in plain text in a Javascript file?</h2>
-  <p></p>
+  <p>It's a bad idea because anyone could view the password by looking at the code in developer mode.</p>
 </body>
 </html>
