JS Atomic #3 done

--- a/03_Variables/index.html
+++ b/03_Variables/index.html
@@ -2,11 +2,19 @@
 <html>
 <head>
   <title>JS Atomic 03</title>
-  <!-- Include your external Javascript file here -->
+  
   <script type="text/javascript" src="global.js"></script>
 </head>
 <body>
   <h1>JS Atomic 03</h1>
-  <!-- Answer the 3 questions above here -->
+  <h2> Why don't you need to use the `var` keyword every time you use a variable (right now, we only use it when we create the variable)? What does `var` do?</h2>
+  <p>You don't need to use it each time because the 'var' keyword is used to tell the computer "Hey! This is a variable and I'm naming it this!".  Once you've named it that, the computer remembers and doesn't need to be told again.  As such, that keyword is used to alert the computer to the fact that you're setting a variable.</p>
+
+  <h2>What happens if you try to do output with a variable without first assigning a value to that variable? What happens? Does the program still work as intended? Do error messages show up in the console? If so, what error message?</h2>
+  <p>It doesn't work when you fail to assign a value to the variable.  It just doesn't perform the JS that you told it to.  It still displays the HTML, but it aborts the JS.  So, no, the program doesn't work as intended.  If you check the console, it does display an error message.  In particular, "Syntax error: Unexpected token ';'.  It basically is puzzled that there's a semi-colon but no variable value preceding it.</p>
+
+  <h2>What questions do you have?</h2>
+  <p>No questions at this time.</p>
+  
 </body>
 </html>
