--- a/06_IfStatements/6a/index.html
+++ b/06_IfStatements/6a/index.html
@@ -7,28 +7,22 @@
 <body>
   <h1>JS Atomic 06a</h1>
 
-
-  console.log( "5 == '5' is " + (5 == '5') ); // true
-	console.log( "5 == 'five' is " + (5 == 'five') ); // false
-	console.log( "5 == '6' is " + (5 == '6') ); false
-	console.log( "5 === '5' is " + (5 === '5') ); true
-	console.log( "true == 'true' is " + (true == 'true') );
-	console.log( "true === 'true' is " + (true === 'true') );
-	console.log( "true == false is " + (true == false) );
-	console.log( "5 == 12 is " + (5 == 12) );
-	console.log( "5 != 12 is " + (5 != 12) );
-	console.log( "5 < 12 is " + (5 < 12) );
-	console.log( "5 <= 12 is " + (5 <= 12) );
-	console.log( "5 > 12 is " + (5 > 12));
-	console.log( "5 >= 12 is " + (5 >= 12));
-
-	<h2>What do you call true and false values?</h2>
-	<p></p>
-	
-	<h2>How is true similar or dissimilar from "true"? Can they be used in the same way?</h2>
-	<p></p>
-
-
+<p>console.log( "5 == '5' is " + (5 == '5') ); // true</p>
+<p>console.log( "5 == 'five' is " + (5 == 'five') ); //false</p>
+<p>console.log( "5 == '6' is " + (5 == '6') ); //false</p>
+<p>console.log( "5 === '5' is " + (5 === '5') ); //false</p>
+<p>console.log( "5 == 2 + 3 is " + (5 == 2 + 3) );//true</p>
+<p>console.log( "5 == 5 is " + (5 == 5) ); //true</p>
+<p>console.log( "5 === 5 is " + (5 === 5) ); // true</p>
+<p>console.log( "true == 'true' is " + (true == 'true') );//true</p>
+<p>console.log( "true === 'true' is " + (true === 'true') );//false</p>
+<p>console.log( "true == false is " + (true == false) ); //false</p>
+<p>console.log( "5 == 12 is " + (5 == 12) );//false</p>
+<p>console.log( "5 != 12 is " + (5 != 12) );//true</p>
+<p>console.log( "5 < 12 is " + (5 < 12) );//true</p>
+<p>console.log( "5 <= 12 is " + (5 <= 12) );//true</p>
+<p>console.log( "5 > 12 is " + (5 > 12));//false</p>
+<p>console.log( "5 >= 12 is " + (5 >= 12));//false</p>
 
 </body>
 </html>
