--- a/06_IfStatements/6d/index.html
+++ b/06_IfStatements/6d/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
 <head>
-  <title>JS Atomic 06</title>
+  <title>JS Atomic 6d</title>
   <script type="text/javascript" src="global.js">
     </script>
 </head>
