--- a/08_InputValidationLoops/index.html
+++ b/08_InputValidationLoops/index.html
@@ -1,11 +1,19 @@
 <!doctype HTML>
 <html>
 <head>
-  <title>JS Atomic 07</title>
+  <title>JS Atomic 08</title>
   <script type="text/javascript" src="8A.js"></script>
+  <script type="text/javascript" src="8B.js"></script>
 </head>
 <body>
-  <h1>JS Atomic 07</h1>
-  <!-- Answer the 3 questions above here -->
+  <h1>JS Atomic 08</h1>
+    <h2> ## 8A: What's the Password? </h2>
+      <h3>What does this program look like if done with a `while` loop? With a `for` loop? Which is better?</h3>
+        <p> If the program uses a while loop, the while loop should continue while the password does not match the user input. 
+        In this case, I think that the while loop is a better method to use because I was trying to coompare the entirely of the string's contents to another, rather than each element in the string.</p>
+
+      <h3>Did you use `==` or `===`? Does it matter? </h3>
+        <p> I actually used != in the while loop, unlike what I did in the previous assignment because I wanted the loop and prompt to continue as long as the input didn't match the password. 
+        I still think == is better, on the off chance the password isn't a string (i.e. set of integers)</p>
 </body>
 </html>
