--- a/08_InputValidationLoops/index.html
+++ b/08_InputValidationLoops/index.html
@@ -4,6 +4,8 @@
   <title>JS Atomic 08</title>
   <script type="text/javascript" src="8A.js"></script>
   <script type="text/javascript" src="8B.js"></script>
+  <script type="text/javascript" src="8C.js"></script>
+    <script type="text/javascript" src="8D.js"></script>
 </head>
 <body>
   <h1>JS Atomic 08</h1>
