--- a/06_IfStatements/indexE.html
+++ b/06_IfStatements/indexE.html
@@ -15,6 +15,7 @@
 
   <h2>Let's say that your program needs to be easy to modify so that it works in parts of the country/world where the age ranges are different. How would you replace the numbers in your if statements with variables to make the program make sense? Or is it easier to just have the numbers be there? Does it matter?</h2>
   <p>If the data was really as limited as it is now, I can't see that it would be especially helpful to turn a handful of numbers into variables.</p>
+  <p>NEVER MIND... thinking about it now, I suppose if you were going to use the values in multiple places on a website (duh) you'd definitely want to use variables instead of numbers that had to be changed everywhere. You could call them stuff like "lessThanDrinkingAge" and "overDrinkingAge" and such.</p>
 
 </body>
 </html>
