--- a/02_OutputWithAlertAndLog/index.html
+++ b/02_OutputWithAlertAndLog/index.html
@@ -8,14 +8,14 @@
   <h1>JS Atomic 02</h1>
   
   <h2>What's the difference between alert() and console.log()?</h2>
-  <p>Put your answer here, then keep going</p>
+  <p>Alert is a pop-up dialog box that is opened by the browser.  Console.log() displays information in the actual browser</p>
   
   <h2>What's one situation where you might use an `alert()` to tell the user something?</h2>
-  <p>Put your answer here, then keep going</p>
+  <p>If the information theyve entered into a form in incorrect</p>
   <p>Maybe you'll have a couple paragraphs for an answer?</p>
   
   <h2>What's one way that `alert()` might get obnoxious?</h2>
-  <p>Put your answer here, then keep going</p>
+  <p>Having to close out the dialog box before continuing would be obnoxious for filling out a form rather than just reloading the form and listing any errors at the top.</p>
   
   <!-- etc. -->
 </body>
