04 Getting input with prompt

--- a/03_Variables/index.html
+++ b/03_Variables/index.html
@@ -6,6 +6,23 @@
 </head>
 <body>
   <h1>JS Atomic 03</h1>
+  <p> 
+    1. Why don't you need to use the `var` keyword every time you use a variable (right now, we only use it when we create the variable)? What does `var` do?
+  </p>
+  <p>
+    var indicates a creation of a variable.  var does not need to be called after a variable has been set because its specifically used in the creation process only.  Once a variable is set you need only refer to it by its name.
+  <p>
+    2. What happens if you try to do output with a variable without first assigning a value to that variable? What happens? Does the program still work as intended? Do error messages show up in the console? If so, what error message?
+  </p>
+  <p>
+    If you dont enter a value for a variable the code still runs it just doesnt put anything where the variable should be. No error messages display.
+  </p>
+  <p>
+  3. What questions do you have?
+  </p>
+  <p>
+    I thought that "console.log" was a way of using "puts" to display messages to the user through the browser.  I think now its more a way of displaying messages to the developer through the browser's console.
+  </p>
   <!-- Answer the 3 questions above here -->
 </body>
 </html>
