--- a/06_IfStatements/6d/index.html
+++ b/06_IfStatements/6d/index.html
@@ -8,6 +8,28 @@
 <body>
   <h1>Questions:</h1>
 <p>
+- Does it matter what order your if-statements are in?
+</p>
+<p>
+No, the script will hit on all statements that return true. 
+</p>
+<p>
+- When testing ranges, did you use `&&`, `||`, or something else entirely (e.g. nested if-statements)? If you used `&&`, why is that a better choice than `||` (and vice-versa)?
+</p>
+<p>
+I used `&&` to test ranges. Using `||` would not work how I need them to, because `||` would have taken the first `true` statement. Because the range has a bottom-half (>0), I need BOTH to be `true`.
+
+</p>
+<p>
+- What types of input produce a value of `NaN` after parsing? Is it important to check for `NaN` values? Is it possible for a `NaN` value to trigger any of the other if-statements? If so, how and why?
+</p>
+<p>
+Letter, or non-number characters produce a NaN value. It is important to check, because, though the program won't fail, none of the alerts will be triggered.
+</p>
+<p>
+- What questions do you have?
+</p>
+<p>
 
 </p>
 </body>
