--- a/07_BasicLoops/index.html
+++ b/07_BasicLoops/index.html
@@ -1,14 +1,11 @@
 <!doctype HTML>
 <html>
 <head>
-  <title>JS Atomic 06</title>
+  <title>JS Atomic 7D FIZZBUZZ</title>
   <script type="text/javascript" src="global.js">
     </script>
 </head>
 <body>
-  <h1>Questions:</h1>
-<p>
-
-</p>
+<h1>MORE FIZZ!</h1>
 </body>
 </html>
