getting an error on else if statement

--- a/07_BasicLoops/7b/index.html
+++ b/07_BasicLoops/7b/index.html
@@ -1,11 +1,11 @@
 <!doctype HTML>
 <html>
 <head>
-  <title>JS Atomic 06b</title>
+  <title>JS Atomic 06a</title>
   <script type="text/javascript" src="global.js"></script>
 </head>
 <body>
-  <h1>JS Atomic 06b</h1>
+  <h1>JS Atomic 06a</h1>
 
 	
 
