--- a/06_IfStatements/index-d.html
+++ b/06_IfStatements/index-d.html
@@ -1,11 +1,11 @@
 <!doctype HTML>
 <html>
 <head>
-  <title>JS Atomic 06D part 1</title>
+  <title>JS Atomic 06D part 1 and 2</title>
   <script type="text/javascript" src="global-d.js"></script>
 </head>
 <body>
-  <h1>JS Atomic 06D part 1</h1>
+  <h1>JS Atomic 06D part 1 and 2</h1>
   <!-- Answer the questions above here -->
 </body>
 </html>
