--- a/05_BasicMath/index.html
+++ b/05_BasicMath/index.html
@@ -13,8 +13,10 @@
 
   <h3><u>Question:</u> What happens if one (or more) of the inputs are non-numeric text (like a comma or a dollar-sign)? What errors occur, if any? What does the console output tell you?
   </h3>
+  <p>Here, when I entered 7,2 as an integer, javascript returned 7.  When I entered $50, javascript returned NaN.  Like the previous example, for an string to be correctly parsed into an integer, the first character of the string must be an integer.</p>
 
   <h3>What questions do you have?</h3>
+  <p>Why will javascript output floats i.e. 7 / 4 = 1.75, while ruby's output would be 7 / 4 = 1
 
 </body>
 </html>
