Done with code for 7A. Questions later.

--- a/06_IfStatements/index-f.html
+++ b/06_IfStatements/index-f.html
@@ -1,11 +1,11 @@
 <!doctype HTML>
 <html>
 <head>
-  <title>JS Atomic 06E</title>
+  <title>JS Atomic 06F</title>
   <script type="text/javascript" src="global-f.js"></script>
 </head>
 <body>
-  <h1>JS Atomic 06E</h1>
+  <h1>JS Atomic 06F</h1>
   <!-- Answer the questions above here -->
 </body>
 </html>
