--- a/06_IfStatements/index.html
+++ b/06_IfStatements/index.html
@@ -8,23 +8,27 @@
   <h1>JS Atomic 06</h1>
   <h2>If Statements</h2>
 
+  <h3>from W3C Schools</h3>
+  <p>==  equal to</p>
+  <p>=== equal value and equal type</p>
+
   <ul>
     <li>console.log( "5 == '5' is " + (5 == '5') ); // true</li>
-    <li>console.log( "5 == 'five' is " + (5 == 'five') );</li>    
-    <li>console.log( "5 == '6' is " + (5 == '6') );</li>
-    <li>console.log( "5 === '5' is " + (5 === '5') );</li>
-    <li>console.log( "5 == 2 + 3 is " + (5 == 2 + 3) );</li>
-    <li>console.log( "5 == 5 is " + (5 == 5) );</li>
-    <li>console.log( "5 === 5 is " + (5 === 5) );</li>
-    <li>console.log( "true == 'true' is " + (true == 'true') );</li>
-    <li>console.log( "true === 'true' is " + (true === 'true') );</li>
-    <li>console.log( "true == false is " + (true == false) );</li>
-    <li>console.log( "5 == 12 is " + (5 == 12) );</li>
-    <li>console.log( "5 != 12 is " + (5 != 12) );</li>
-    <li>console.log( "5 < 12 is " + (5 < 12) );</li>
-    <li>console.log( "5 <= 12 is " + (5 <= 12) );</li>
-    <li>console.log( "5 > 12 is " + (5 > 12));</li>
-    <li>console.log( "5 >= 12 is " + (5 >= 12));</li>
+    <li>console.log( "5 == 'five' is " + (5 == 'five') ); //false</li>    
+    <li>console.log( "5 == '6' is " + (5 == '6') ); // false</li>
+    <li>console.log( "5 === '5' is " + (5 === '5') ); // false</li>
+    <li>console.log( "5 == 2 + 3 is " + (5 == 2 + 3) ); // false</li>
+    <li>console.log( "5 == 5 is " + (5 == 5) ); // true</li>
+    <li>console.log( "5 === 5 is " + (5 === 5) ); // true</li>
+    <li>console.log( "true == 'true' is " + (true == 'true') ); // true</li>
+    <li>console.log( "true === 'true' is " + (true === 'true') ); // false</li>
+    <li>console.log( "true == false is " + (true == false) ); // false</li>
+    <li>console.log( "5 == 12 is " + (5 == 12) ); // false</li>
+    <li>console.log( "5 != 12 is " + (5 != 12) ); // true</li>
+    <li>console.log( "5 < 12 is " + (5 < 12) ); // true</li>
+    <li>console.log( "5 <= 12 is " + (5 <= 12) ); // true</li>
+    <li>console.log( "5 > 12 is " + (5 > 12)); // false</li>
+    <li>console.log( "5 >= 12 is " + (5 >= 12)); // false</li>
   </ul>
   
    
