--- a/06_IfStatements/06_E/index.html
+++ b/06_IfStatements/06_E/index.html
@@ -27,13 +27,13 @@
 <p>You will not need to use `else` or `else if` in this exercise.</p>
 
 <h2>Does it matter what order your `if` / `else if` statements happen? If you reorder them, does your program still produce correct output?</h2>
-<p>Answer</p>
+<p>This should still work fine bacause they are all mutually exclusive in this case, except the final else would have to stay put if I kept it as a plain else catchall without having to check for NaN.</p>
 
 <h2>What's wrong with this conditional: `if (age < 16 && age > 21)`?</h2>
-<p>Answer.</p>
+<p>You can't be less than 16 and also greater than 21 unless you have a Peter Pan-like alter ego living on a parallel Universe, which I think all of us probably do, so there isn't anything wrong with that conditional.</p>
 
 <h2>Let's say that your program needs to be easy to modify so that it works in parts of the country/world where the age ranges are different. How would you replace the numbers in your `if` statements with variables to make the program make sense? Or is it easier to just have the numbers be there? Does it matter?</h2>
-<p>Answer.</p>
+<p>If a variable like 'drinking age' changed in every country, I would probably assign it to a variable to that I only had to change it in one place whenever I implemented this program in a different country.</p>
 
 
 
