6A: Relational and Equality Operators done

--- a/06_IfStatements/index.html
+++ b/06_IfStatements/index.html
@@ -7,20 +7,24 @@
 <body>
   <h1>JS Atomic 06</h1>
   <h2>If Statements</h2>
-
-  <h3>from W3C Schools</h3>
-  <p>==  equal to</p>
-  <p>=== equal value and equal type</p>
-
+  <h3>6A: Relational and Equality Operators</h3>
   <ul>
     <li>console.log( "5 == '5' is " + (5 == '5') ); // true</li>
     <li>console.log( "5 == 'five' is " + (5 == 'five') ); //false</li>    
     <li>console.log( "5 == '6' is " + (5 == '6') ); // false</li>
     <li>console.log( "5 === '5' is " + (5 === '5') ); // false</li>
     <li>console.log( "5 == 2 + 3 is " + (5 == 2 + 3) ); // false</li>
+      <ul>
+        <li>5 == 2 + 3 is true</li>
+        <li>5 is equal to 2 + 3 in javascript</li>
+      </ul>
     <li>console.log( "5 == 5 is " + (5 == 5) ); // true</li>
     <li>console.log( "5 === 5 is " + (5 === 5) ); // true</li>
     <li>console.log( "true == 'true' is " + (true == 'true') ); // true</li>
+      <ul>
+        <li>true == 'true' is false</li>
+        <li>true is not equal to 'true' in javascript</li>
+      </ul>    
     <li>console.log( "true === 'true' is " + (true === 'true') ); // false</li>
     <li>console.log( "true == false is " + (true == false) ); // false</li>
     <li>console.log( "5 == 12 is " + (5 == 12) ); // false</li>
@@ -31,6 +35,11 @@
     <li>console.log( "5 >= 12 is " + (5 >= 12)); // false</li>
   </ul>
   
+  <h4>Questions</h4>
+  <h5>What do you call true and false values?</h5>
+  <p>Comparison and Logical operators are used to test for true or false in the DOM Console.</p>
+  <h5>How is true similar or dissimilar from "true"? Can they be used in the same way?</h5>
+  <p>true is not the same as 'true', thus they can not be used in the same way.</p>
    
 
 </body>
