catching up with commits

--- a/06_IfStatements/index.html
+++ b/06_IfStatements/index.html
@@ -61,6 +61,11 @@
   <h5>In this case, does it make more sense to leave the user's guess as a string, or to convert it to an integer? Why? What are the relative advantages / disadvantages of each approach (particularly in terms of the types of new features that might be able to be added)?</h5>
   <p>To me it makes more sense to convert the user's guess to an integer since we are asking for an integer.  But, when we convert the user's guess to an integer we leave the door open to have an incorrect guess count as correct.  For example, if I enter '23 and me' for my number, the reply is still 'correct' since javascript converts the numbers to an integer as long as the string starts with a number, and apparently disregards the text.</p>
 
+  <h3>6D: Driver's Ed, Part 1</h3>
+  <h4>no</h4>
+  <h4>didn't have time to do this</h4>
+  <h4>any non-integer jibberish I would think, but I can't get the userAge == NaN to bring up an alert</h4>
+
    
 
 </body>
