--- a/06_IfStatements/index.html
+++ b/06_IfStatements/index.html
@@ -66,6 +66,11 @@
   <h4>didn't have time to do this</h4>
   <h4>any non-integer jibberish I would think, but I can't get the userAge == NaN to bring up an alert</h4>
 
+  <h3>6D: Driver's Ed, Part 2</h3>
+  <h4>no, yes</h4>
+  <h4>asking for an age < 16 and also > 21, not possible.</h4>
+  <h4>assign number variables based on location.</h4>
+
    
 
 </body>
