--- a/05_BasicMath/index.html
+++ b/05_BasicMath/index.html
@@ -1,1 +1,33 @@
-<script type="text/javascript" src="global.js"></script>
+<!doctype HTML>
+<html>
+<head>
+  <title>JS Atomic 04</title>
+  <script type="text/javascript" src="global.js"></script>
+</head>
+<body>
+ <h1>JS Atomic 05</h1>
+  <p>
+  1.What happens when you try to parse the integer out of a string like `"I am 9 years old"`? How about `"9 is my age"`? Other combinations of numbers and letters? What needs to be true about the incoming string for it to be parsed correctly?
+  </p>
+
+  <p>
+  A string cannot be converted to an integer unless its a number.  If letters are submitted <strong> before </strong> a number the result is NaN. For it to be parsed correctly either only provide a number or make sure that the number is the first thing in the string.
+  </p>
+
+
+  <p>2.What happens if one (or more) of the inputs are non-numeric text (like a comma or a dollar-sign)? What errors occur, if any? What does the console output tell you?
+  </p>
+
+  <p>
+  Same thing happens
+  </p>
+
+  <p>3.What questions do you have? 
+  </p>
+
+  <p>
+  why did you use x++ instead of ++x? it looks as though x++ returns the original value of x?
+  </p>
+
+</body>
+</html>
