JS Atomic 06 - done

--- a/06_IfStatements/index.html
+++ b/06_IfStatements/index.html
@@ -66,10 +66,18 @@
   <h4>didn't have time to do this</h4>
   <h4>any non-integer jibberish I would think, but I can't get the userAge == NaN to bring up an alert</h4>
 
-  <h3>6D: Driver's Ed, Part 2</h3>
+  <h3>6E: Driver's Ed, Part 2</h3>
   <h4>no, yes</h4>
   <h4>asking for an age < 16 and also > 21, not possible.</h4>
   <h4>assign number variables based on location.</h4>
+
+  <h3>6F: Triangles</h3>
+  <h4>What happens if one (or more) of the lengths aren't input correctly and thus end up as NaN?</h4>
+  <p>we get 'That is not a real triangle!' result</p>
+  <h4>What happens if one of the lengths of the triangle is 0? Two of the lengths? All three lengths?</h4>
+  <p>All three scenarios result in 'That is not a real triangle!'.  That makes sense for when one or two lengths are zero, but I anticipated a possible bug in which 0,0,0 would return an equalateral triangle.
+  <h4>What happens if the user inputs one or more negative integers for the lengths of the triangle's legs?</h4>
+  <p>every result is 'That is not a real triangle!'</p>
 
    
 
