--- a/07_BasicLoops/index.html
+++ b/07_BasicLoops/index.html
@@ -7,6 +7,7 @@
 <body>
   <h1>JS Atomic 07</h1>
   <h2>Loops</h2>
+    <p>while (condition) { code block to be executed }</p>
   <h3>7A: While Loops</h3>
   <h3>7B: More Counting</h3>
   <h3>7C: A Fizzy Drink</h3>
