--- a/07_BasicLoops/index.html
+++ b/07_BasicLoops/index.html
@@ -12,6 +12,7 @@
   <h3>7C: A Fizzy Drink</h3>
   <h3>7D: More Fizz</h3>
   <h3>7E-H: What For?</h3>
+  <p>Apart from changing your loop headers, what other changes do you need to make for each? Given that you use either loop structure interchangeably, what do the different loop structures seem suited for?</p>
  
 </body>
 </html>
