--- a/07_BasicLoops/index.html
+++ b/07_BasicLoops/index.html
@@ -12,7 +12,12 @@
   <h3>7C: A Fizzy Drink</h3>
   <h3>7D: More Fizz</h3>
   <h3>7E-H: What For?</h3>
-  <p>Apart from changing your loop headers, what other changes do you need to make for each? Given that you use either loop structure interchangeably, what do the different loop structures seem suited for?</p>
+  <h4>Apart from changing your loop headers, what other changes do you need to make for each?</h4>
+  <p>For my examples, I used a variable 'i' in each function to signify the integer that we are doing the function on.
+  <h4>Given that you use either loop structure interchangeably, what do the different loop structures seem suited for?</h4>
+  <p>The 'for' loop loops through a block of code a number of times.  The 'while' loop loops through a block of code as long as a specified condition is true.  The 'for' loop is executed before the code block starts, defines the condition for running the code block, and is executed each time after the code block has been executed.  The 'while' loop is much the same as the 'for' loop except that it only defines the the condition for running the code block.</p>
+
+
  
 </body>
 </html>
